[gd_scene load_steps=6 format=3 uid="uid://dfjb2dpxphywj"]

[ext_resource type="Texture2D" uid="uid://b7eg7m612ghqi" path="res://assets/sparks/lightning_line1a1.png" id="1_1iikh"]
[ext_resource type="Script" path="res://sparks/Sparks.gd" id="1_e11oe"]
[ext_resource type="Texture2D" uid="uid://wy7x6vgtiddo" path="res://assets/sparks/lightning_line1a4.png" id="2_sk5ek"]
[ext_resource type="AudioStream" uid="uid://bjblywp3hfaw4" path="res://assets/sound/sparks.wav" id="3_xhmb1"]

[sub_resource type="CircleShape2D" id="CircleShape2D_uxeww"]
radius = 101.0

[node name="Sparks" type="Node2D"]
script = ExtResource("1_e11oe")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(38, -18)
rotation = -1.05316
texture = ExtResource("1_1iikh")

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(39, -64)
rotation = -2.19287
texture = ExtResource("1_1iikh")

[node name="LightningLine1a4" type="Sprite2D" parent="."]
position = Vector2(8, 2)
texture = ExtResource("2_sk5ek")

[node name="Sprite2D3" type="Sprite2D" parent="."]
position = Vector2(29.6474, -21.5079)
rotation = -1.95633
texture = ExtResource("1_1iikh")

[node name="Sprite2D4" type="Sprite2D" parent="."]
position = Vector2(30.6474, -67.5079)
rotation = -3.09604
texture = ExtResource("1_1iikh")

[node name="LightningLine1a5" type="Sprite2D" parent="."]
position = Vector2(-0.352638, -1.50786)
rotation = -0.90317
texture = ExtResource("2_sk5ek")

[node name="Sprite2D5" type="Sprite2D" parent="."]
position = Vector2(46.115, -28.6193)
rotation = -0.222542
texture = ExtResource("1_1iikh")

[node name="Sprite2D6" type="Sprite2D" parent="."]
position = Vector2(47.115, -74.6193)
rotation = -1.36225
texture = ExtResource("1_1iikh")

[node name="LightningLine1a6" type="Sprite2D" parent="."]
position = Vector2(16.115, -8.61934)
rotation = 0.830614
texture = ExtResource("2_sk5ek")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_xhmb1")
autoplay = true
max_distance = 1160.0

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(12, -37)
shape = SubResource("CircleShape2D_uxeww")

[connection signal="timeout" from="DamageTimer" to="." method="_on_damage_timer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
